# infra-ng

./: .ansible-lint  .gitignore  .pre-commit-config.yaml  INFRA.md  README.md  pyproject.toml
admin-scripts/legacy/: backup_gitlab.py  lxc_exec_all.py  utils.py
ansible/: README.md  ansible.cfg  base-setup.yml  dell-desktop-setup.yml  docker-deploy-site.yml  docker-install.yml  gammasite.hosts  haproxy.yml  hosts_alphasite  hosts_alphasite_hass  hosts_deltasite  hosts_gammasite  hosts_testsite  k3s-deploy.yml  k3s-lxd-test.hosts.yml  k3s-pull-kubeconfig.yml  k3s-remove.yml  lxd-provision.yml  standard-server-setup.yml  standard-user-setup-local.yml  standard-user-setup.yml  unifi.yml  user-home.yml
ansible/group_vars/all/: vars.yaml  vault
ansible/group_vars/alphasite/: vars.yml  vault
ansible/group_vars/alphasite_hass/: vars.yml  vault
ansible/group_vars/deltasite/: vars.yml  vault
ansible/group_vars/gammasite/: vars.yml  vault
ansible/group_vars/k3s_cluster/: vars.yml  vault
ansible/group_vars/k3s_control/: vars.yml
ansible/group_vars/testsite/: vars.yml  vault
ansible/host_vars/: gitea.yaml  k3s-test.yml
ansible/inventory/: hosts.yml
docs/: deltasite.md  docker-compose.md  gammasite.md  infra-design.md  kube-k3s.md  legacy.md  networking.md
legacy-scripts/: backup_gitlab.py  dnsupdate.py  lxc_cli.py  lxc_exec_all.py  update_certs_haproxy.py
sites/gammasite/homeassistant/: docker-compose.yaml  docker-compose.yml
sites/gammasite/infra/: docker-compose.yaml  docker-compose.yml
sites/gammasite/portainer/: docker-compose.yaml
(+90 files in other folders)
