[tool.poetry]
name = "infra-ng"
version = "0.1.0"
description = "Infrastructure Management GNet"
authors = ["garvbox <garv@garvbox.net>"]
readme = "README.md"
packages = [{include = "infra_ng"}]

[tool.poetry.dependencies]
python = "^3.11"
ansible = "^8.1.0"
ansible-lint = { version = "^6.9.0", markers = "platform_system != 'Windows'" }
pre-commit = "^3.3.3"
yamllint = "^1.32.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.291"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.ruff]
select = ["E", "F", "I"]
line-length = 100

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
